--- a/Trial/index.html
+++ b/Trial/index.html
@@ -1,40 +1,119 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Heart Click Effect</title>
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-  <style>
-    /* Default Heart Icon */
-    .heart {
-      font-size: 2rem;
-      color: gray;
-      cursor: pointer;
-      transition: color 0.3s ease-in-out;
+<template>
+    <div class="admin-container">
+        <div class="admin-form-container">
+            <form id="adminForm" @submit="handleSubmit" novalidate autocomplete="off">
+                <h3>ADMIN</h3>
+
+                <div v-if="errors.length" class="error-box">
+                    <ul>
+                        <li v-for="error in errors" :key="error">{{ error }}</li>
+                    </ul>
+                </div>
+
+                <div class="form-group password-group">
+                    <input :type="showPassword ? 'text' : 'password'" id="uPass" name="uPass" class="form-control"
+                        placeholder="Enter admin password" v-model="adminObj.pass" />
+                    <span class="eye-icon" @click="togglePassword">
+                        {{ showPassword ? '👁️' : '🙈' }}
+                    </span>
+                </div>
+
+                <div class="form-group">
+                    <input type="submit" value="Admin Access" class="btn">
+                </div>
+            </form>
+        </div>
+    </div>
+</template>
+
+<script>
+import { mapMutations } from "vuex";
+export default {
+    name: 'Admin',
+
+    data() {
+        return {
+            adminObj: { pass: "" },
+            key: "13052005", // Updated admin password
+            errors: [],
+            showPassword: false,
+        }
+    },
+
+    methods: {
+        ...mapMutations(["setAdmin"]),
+
+        togglePassword() {
+            this.showPassword = !this.showPassword;
+        },
+
+        handleSubmit(e) {
+            this.errors = [];
+            if (!this.adminObj.pass) {
+                this.errors.push('Password is required');
+            }
+
+            if (!this.errors.length == 0) {
+                e.preventDefault();
+            }
+            else {
+                e.preventDefault();
+                if (this.key === this.adminObj.pass) {
+                    this.setAdmin("admin");
+                    this.$router.push("/admin/dashboard");
+                }
+                else {
+                    this.errors.push("Admin password wrong!")
+                }
+            }
+        }
     }
+}
+</script>
 
-    /* Active (Red) Heart */
-    .heart.active {
-      color: red;
-    }
-  </style>
-</head>
-<body>
+<style scoped>
+.admin-container {
+    padding: 2rem 9%;
+}
 
-  <!-- Heart Icon -->
-  <a href="#" class="fas fa-heart heart"></a>
+.admin-container .admin-form-container {
+    background-color: #fff;
+    height: 100vh;
+}
 
-  <script>
-    // Select the heart icon
-    const heart = document.querySelector(".heart");
+.admin-container .admin-form-container form {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 40rem;
+    width: 100%;
+    box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.05);
+    border: 0.1rem solid rgba(0, 0, 0, 0.2);
+    padding: 2rem;
+    border-radius: .5rem;
+    animation: fadeUp .4s linear;
+}
 
-    // Toggle red color on click
-    heart.addEventListener("click", function(event) {
-      event.preventDefault(); // Prevent default link action
-      heart.classList.toggle("active");
-    });
-  </script>
+.password-group {
+    position: relative;
+}
 
-</body>
-</html>
+.eye-icon {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    font-size: 1.5rem;
+}
+
+.admin-container .admin-form-container form h3 {
+    padding-bottom: 1rem;
+    font-size: 2rem;
+    font-weight: bolder;
+    text-transform: uppercase;
+    color: #130f40;
+    margin: 0;
+}
+</style>
